<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_linearlayout"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    android:orientation="vertical"
    app:behavior_peekHeight="?actionBarSize"
    app:layout_behavior="@string/bottom_sheet_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="100">

            <RelativeLayout
                android:id="@+id/hiddn_layout_head"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/colorPrimary"
                android:layout_weight="25">
                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:visibility="invisible" />

                <ImageView
                    android:id="@+id/slideup_arrow"
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_slideup" />

                <TextView
                    android:id="@+id/login_using_phone_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/slideup_arrow"
                    android:gravity="center"
                    android:text="@string/login_title"
                    android:textColor="@color/black" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phone_no_inputlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/phone_no"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:hint="@string/phn_hint"
                        android:inputType="phone"
                        android:paddingTop="10dp" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/generate_otp_btn"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/phone_no_inputlayout"
                    android:background="@drawable/full_round_button"
                    android:onClick="genOtp"
                    android:text="@string/genOtp_hint"
                    android:textSize="12sp" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/otp_inputlayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/enter_otp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:hint="@string/otp_hint"
                        android:inputType="phone"
                        android:paddingTop="10dp" />
                </android.support.design.widget.TextInputLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="25"
                android:gravity="center">

                <Button
                    android:id="@+id/login_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/white_rounded_button"
                    android:ems="10"
                    android:onClick="onLogin"
                    android:text="@string/login_btn_hint" />

            </RelativeLayout>


        </LinearLayout>


</LinearLayout>